--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -3,32 +3,34 @@
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
-		$('#feat_table').tablesorter({		
+	$('#feat_table').tablesorter({		
 		cssAsc: 'headerSortUp',		// Class name for ascending sorting action to header
 		cssDesc: 'headerSortDown',	// Class name for descending sorting action to header
-//		cssHeader: 'header',			// Class name for headers (th's)
+//		cssHeader: 'header',		// Class name for headers (th's)
 		widgets: ['zebra'],
 		headers: {0: {sorter: false},},					
-		});
-		check_display();
-/*		$('#feat_table').columnFilters({
-			alternateRowClassNames:['even','odd'],
-			excludeColumns: [0,],
-			});
+	});
+	check_display();
+/*	$('#feat_table').columnFilters({
+		alternateRowClassNames:['even','odd'],
+		excludeColumns: [0,],
+	});
 */
-		$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
-		$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
+	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
+	$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
 });
 
 
 //set up the jquery ui
 $(function() {
-	     //substaniate dialog box	     
-	     $("#table_opts_dialog").dialog({ height: 150,
-	       				     width: 627,
-					     autoOpen: false,
+	//substaniate dialog box	     
+	$("#table_opts_dialog").dialog({ 
+		height: 150,
+		width: 627,
+		autoOpen: false,
 	});
-	var page_url = document.location;
+	
+/*	var page_url = document.location;
 	     $("#save_form").dialog({ autoOpen: false,
 	     			      height: 331,
 				      width: 461,
@@ -42,98 +44,113 @@ $(function() {
 						$(this).dialog("close"); }
 						}
 	});
-	     //button effects on events
-	     $('#table_opts').click(function() {
-					$('#table_opts_dialog').dialog('open');
-			});
-	     $('#history_dialog_button').click(function() {
-					$('#save_form').dialog('open');
-			});
-
+*/
+	
+	//button effects on events
+	$('#table_opts').click(function() {
+		$('#table_opts_dialog').dialog('open');
+	});
+	$('#history_dialog_button').click(function() {
+		$('#save_form').dialog('open');
+	});
 }); 
 
 //Filters Rows for search_text - Case sensitive as of now, and searches hidden columns...
 function filter_rows (search_text){
-	 if(! search_text) { $("#feat_table tr:hidden").show(0);}
-	 else if (search_text.length >= 3) {
-	 $("#feat_table_body tr:hidden").show(0);
-	 if( $('#search_type').val() == 1 ) { $("#feat_table_body tr:not(:contains('"+search_text+"'))").hide(); }
-	 else { $("#feat_table_body tr:contains('"+search_text+"')").hide(); }
-}
-         else return;
+	if(! search_text) { $("#feat_table tr:hidden").show(0);}
+	else if (search_text.length >= 3) {
+		$("#feat_table_body tr:hidden").show(0);
+		if( $('#search_type').val() == 1 ) { $("#feat_table_body tr:not(:contains('"+search_text+"'))").hide(); }
+		else { $("#feat_table_body tr:contains('"+search_text+"')").hide(); }
+	}
+	else return;
 }
 
 function feature_checkboxes(){
-  var action = $('#checked_action').val();
-  var accn=",";
-  $('#feat_table :checkbox').each(function(){
-     if (this.checked == true) accn = accn + this.id+",";
-   });
-  if (accn == ",") {
-    alert("Danger Will Robinson!\n1D-10T error!  You have not checked any features.");
-    return;
-  }
-  if(action == "gevo") {
-    gevo(['args__'+accn],[export_url]);
-  }
-  else if (action == "fasta"){
-    get_fasta_seqs(['args__'+accn],[export_url]);
-  }
-  else if (action == "CodeOn"){
-    export_CodeOn(['args__'+accn],[export_url]);
-  }
-  else if (action == "xls"){
-    $('#retrieve_message').html('Retrieving data');
-    generate_excel_file(['args__'+accn],[export_url]);
-  }
-  else if (action == "blast"){
-    blast(['args__'+accn],[export_url]);
-  }
-  else if (action == "featmap"){
-  	send_to_featmap(['args__'+accn],[export_url]);
-  }
-  else if (action == "msa"){
-    send_to_msa(['args__'+accn],[export_url]);
-  }
-  else if (action == "featlist"){
-    send_to_featlist(['args__'+accn],[export_url]);
-  }
-  else if (action == "SynFind"){
-    send_to_SynFind(['args__'+accn],[export_url]);
-  }
-  else {
-    alert("We will get this working ... soon.");
-  }
+	var action = $('#checked_action').val();
+	var accn = ",";
+	$('#feat_table :checkbox').each(function(){
+		if (this.checked == true) accn = accn + this.id + ",";
+	});
+	if (accn == ",") {
+		alert("Danger Will Robinson!\n1D-10T error!  You have not checked any features.");
+		return;
+	}
+	
+	$.ajax({
+		data: {
+			jquery_ajax: 1,
+			fname: action,
+			name: name,
+			accn_list: accn
+		},
+		success : function(url) {
+			window.open(url,'_blank');
+		}
+	});		
+	
+/*	
+	if(action == "gevo") {
+		gevo(['args__'+accn],[export_url]);
+	}
+	else if (action == "fasta"){
+		get_fasta_seqs(['args__'+accn],[export_url]);
+	}
+	else if (action == "CodeOn"){
+		export_CodeOn(['args__'+accn],[export_url]);
+	}
+	else if (action == "xls"){
+		$('#retrieve_message').html('Retrieving data');
+		generate_excel_file(['args__'+accn],[export_url]);
+	}
+	else if (action == "blast"){
+		blast(['args__'+accn],[export_url]);
+	}
+	else if (action == "featmap"){
+		send_to_featmap(['args__'+accn],[export_url]);
+	}
+	else if (action == "msa"){
+		send_to_msa(['args__'+accn],[export_url]);
+	}
+	else if (action == "featlist"){
+		send_to_featlist(['args__'+accn],[export_url]);
+	}
+	else if (action == "SynFind"){
+		send_to_SynFind(['args__'+accn],[export_url]);
+	}
+	else if (action == 'list') {
+		send_to_list(['args__'+accn],[export_url]);
+	}
+	else {
+		alert("We will get this working ... soon.");
+	}
+*/
 }
-
-
 
 function export_url(url,num_accns) {
-  if (url == "alert") {
-    var remove = num_accns - 20;
-    alert("You have exceeded the number of features you can send to GEvo ( 20 Max ). You currently have "+num_accns+" selected. Please uncheck "+remove+" of your checked item(s).");
-  }
-  else {
-    var regex = /xls$/;
-    if ($('#gstid').val() && !regex.test(url))
-     {
-       url=url+';gstid='+$('#gstid').val();
-     }
-    window.open(url);
-  }
-  $('#retrieve_message').html(' ');
-  
+	if (url == "alert") {
+		var remove = num_accns - 20;
+		alert("You have exceeded the number of features you can send to GEvo ( 20 Max ). You currently have "+num_accns+" selected. Please uncheck "+remove+" of your checked item(s).");
+	}
+	else {
+		var regex = /xls$/;
+		if ($('#gstid').val() && !regex.test(url))
+		{
+			url=url+';gstid='+$('#gstid').val();
+		}
+		window.open(url);
+	}
+	$('#retrieve_message').html(' ');
 }
 
-
 function show_all_codon_tables(num) {
- for (var i=1; i<=num; i++)
-  {
-   $('#codon_usage'+i).removeClass('link');
-   gen_data(['args__loading'],['codon_usage'+i]);
-   get_codon_table(i);
-  }
-  $('#show_all_codon').remove();
+	for (var i=1; i<=num; i++)
+	{
+		$('#codon_usage'+i).removeClass('link');
+		gen_data(['args__loading'],['codon_usage'+i]);
+		get_codon_table(i);
+	}
+	$('#show_all_codon').remove();
 }
 
 function get_codon_table (num) {
@@ -144,7 +161,6 @@ if (ajax.length)
    }
    var fid =    $('#CDS'+num).val();
    codon_table(['args__fid','args__'+fid],['codon_usage'+num]);
-
 }
 
 function update_table() {
@@ -177,8 +193,6 @@ function get_all_gc(num) {
   }
   $('#get_all_gc').remove();
     update_table();
-  		
-
 }
 
 function get_all_wgc(num) {
@@ -196,8 +210,6 @@ function get_all_wgc(num) {
   update_table();
 }
 
-
-
 function toggle_column(index) {
  show = 0;
 
@@ -212,7 +224,6 @@ function toggle_column(index) {
     $('#feat_table td:nth-child('+(1*index+1)+')').hide();
     $('#feat_table th:nth-child('+(1*index+1)+')').hide();
    }
-    
 }
 
 function check_display() {
@@ -221,7 +232,6 @@ $('#show_columns td').each(function() {
     if (!$(this).children()[0].checked){ toggle_column(i);}
     i++;
   });
-
 }
 
 function check_type (type) {
@@ -232,7 +242,6 @@ function check_type (type) {
      $('td:eq(0) input:checkbox', this).attr('checked', true);
    }
  });
- 
 }
 
 function save_display_settings() {
@@ -325,14 +334,14 @@ Filter Table Rows:
       <TD><TMPL_VAR NAME=NAME></TD>
       <TD><TMPL_VAR NAME=TYPE></TD>
       <TD><TMPL_VAR NAME=CHR></TD>
-      <TD align=right><TMPL_VAR NAME=START></TD>
-      <TD align=right><TMPL_VAR NAME=STOP></TD>
-      <TD align=center><TMPL_VAR NAME=STRAND></TD>
-      <TD align=right><TMPL_VAR NAME=LENGTH></TD>
-      <TD align=right id="gc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=GC></TD>
-      <TD align=right id="at_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=AT></TD>
-      <TD align=right id="wgc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#wgc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#wat_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_wobble_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['wgc_<TMPL_VAR NAME=COUNT>', 'wat_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=WGC></TD>
-      <TD align=right id="wat_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#wgc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#wat_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_wobble_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['wgc_<TMPL_VAR NAME=COUNT>', 'wat_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=WAT></TD>
+      <TD align='right'><TMPL_VAR NAME=START></TD>
+      <TD align='right'><TMPL_VAR NAME=STOP></TD>
+      <TD align='center'><TMPL_VAR NAME=STRAND></TD>
+      <TD align='right'><TMPL_VAR NAME=LENGTH></TD>
+      <TD align='right' id="gc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=GC></TD>
+      <TD align='right' id="at_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=AT></TD>
+      <TD align='right' id="wgc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#wgc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#wat_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_wobble_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['wgc_<TMPL_VAR NAME=COUNT>', 'wat_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=WGC></TD>
+      <TD align='right' id="wat_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#wgc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#wat_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_wobble_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['wgc_<TMPL_VAR NAME=COUNT>', 'wat_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=WAT></TD>
       <TD><TMPL_VAR NAME=ORG></TD>
       <TD><TMPL_VAR NAME=HPP></TD>
       <TD nowrap><TMPL_VAR NAME=OTHER></TD>
@@ -341,46 +350,52 @@ Filter Table Rows:
   </tbody>
  </TABLE>
  </form>
-<!--<input type=button value="Check All" onclick="$('#feat_table :checkbox').attr('checked', true);">
-<input type=button value="Uncheck All" onclick="$('#feat_table :checkbox').attr('checked', false);">-->
+ <!--<input type=button value="Check All" onclick="$('#feat_table :checkbox').attr('checked', true);">
+ <input type=button value="Uncheck All" onclick="$('#feat_table :checkbox').attr('checked', false);">-->
 
-<!-- TODO - consider putting onClick declarations in javascript for simplicity -->
-<span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :checkbox').attr('checked', true);"><span class="ui-icon ui-icon-check"></span>Check All</span>
-<span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :checkbox').attr('checked', false);"><span class="ui-icon ui-icon-minus"></span>Uncheck All</span>
-<span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :visible :checkbox').attr('checked', true);"><span class="ui-icon ui-icon-check"></span>Check Visible</span>
-<span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :visible :checkbox').attr('checked', false);"><span class="ui-icon ui-icon-minus"></span>Uncheck Visible</span>
-<span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="check_type()"><span class="ui-icon ui-icon-check"></span>Check Features of type:</span><TMPL_VAR NAME="FEAT_TYPES">
-<TMPL_IF NAME=SAVE_DATA>
-<span href="javascript:void(0);" id="history_dialog_button" class='ui-button ui-corner-all ui-button-icon-left'><span class="ui-icon ui-icon-newwin"></span>Save Table</span>
-</TMPL_IF>
- <div>
-  Send Checked Features to:  
-   <select name=checked_action id=checked_action>
-    <option value = "blast">CoGeBlast</option>
-    <option value = "gevo">GEvo</option>
-    <option value = "msa">CoGeAlign</option>
-    <option value = "fasta">FASTA Sequences</option>
-    <option value = "featmap">Genome Map</option>
-    <option value = "xls">Excel</option>
-    <option value = "featlist">FeatList</option>
-    <option value = "CodeOn">Coding Evolution</option>
-    <option value = "SynFind">SynFind</option>
-   </select>
-<span class='ui-button ui-corner-all ui-button-icon-right' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span><span id=retrieve_message class=alert></span>  
-  </div>
+ <!-- TODO - consider putting onClick declarations in javascript for simplicity -->
+ <span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :checkbox').attr('checked', true);"><span class="ui-icon ui-icon-check"></span>Check All</span>
+ <span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :checkbox').attr('checked', false);"><span class="ui-icon ui-icon-minus"></span>Uncheck All</span>
+ <span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :visible :checkbox').attr('checked', true);"><span class="ui-icon ui-icon-check"></span>Check Visible</span>
+ <span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="$('#feat_table tr :visible :checkbox').attr('checked', false);"><span class="ui-icon ui-icon-minus"></span>Uncheck Visible</span>
+ <span href="javascript:void(0);" class='ui-button ui-corner-all ui-button-icon-left' onclick="check_type()"><span class="ui-icon ui-icon-check"></span>Check Features of type:</span><TMPL_VAR NAME="FEAT_TYPES">
+<!--
+ <TMPL_IF NAME=SAVE_DATA>
+ <span href="javascript:void(0);" id="history_dialog_button" class='ui-button ui-corner-all ui-button-icon-left'><span class="ui-icon ui-icon-newwin"></span>Save Table</span>
+ </TMPL_IF>
+-->
 
-<div id="save_form" title="Save Results">
-<table class="ui-widget-content ui-corner-all">
-<tr>
-<td>Work Name:</td>
-<td><input type=text id='work_name' value='FeatList Data'></td>
-</tr>
-<tr>
-<td>Description:</td>
-<td><input type=text id='description'></td>
-</tr>
-<tr>
-<td>Notes:</td>
-<td><textarea style="height:150px;width:350px;" id=note></textarea></td>
-</table>
+<div>
+ Send Checked Features to:  
+ <select name='checked_action' id='checked_action'>
+  <option value="send_to_blast">CoGeBlast</option>
+  <option value="send_to_gevo">GEvo</option>
+  <option value="send_to_msa">CoGeAlign</option>
+  <option value="send_to_fasta">FASTA Sequences</option>
+  <option value="send_to_featmap">Genome Map</option>
+  <option value="send_to_xls">Excel</option>
+  <option value="send_to_featlist">FeatList</option>
+  <option value="send_to_CodeOn">Coding Evolution</option>
+  <option value="send_to_SynFind">SynFind</option>
+  <option value="send_to_list">List</option>
+ </select>
+ <span class='ui-button ui-corner-all ui-button-icon-right' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span><span id="retrieve_message" class="alert"></span>  
 </div>
+
+<!--
+<div id="save_form" title="Save Results">
+ <table class="ui-widget-content ui-corner-all">
+  <tr>
+   <td>Work Name:</td>
+   <td><input type='text' id='work_name' value='FeatList Data'></td>
+  </tr>
+  <tr>
+   <td>Description:</td>
+   <td><input type='text' id='description'></td>
+  </tr>
+  <tr>
+   <td>Notes:</td>
+   <td><textarea style="height:150px;width:350px;" id='note'></textarea></td>
+ </table>
+</div>
+-->
