--- a/web/tmpl/ListView.tmpl
+++ b/web/tmpl/ListView.tmpl
@@ -158,7 +158,7 @@ function add_selected_items (opts){
 					function(data) {
 						if (data != 1) {alert(data);}
 						else {
-							run_get_list_contents({divid: 'list_contents', lid: lid});
+							run_get_list_contents({divid: 'list_contents', lid: lid}); // FIXME move outside loop
 						}
 					},
 			});
@@ -305,20 +305,29 @@ function remove_list_annotation (opts) {
 }
 
 function wait_to_search (search_func, lid, search_term) {
-	if (search_term.length > 2) {
+	if (search_term && search_term.length > 2) {
 		pageObj.search_term = search_term;
 		pageObj.lid = lid;
-		
+			
 		if (pageObj.time) {
 			clearTimeout(pageObj.time);
 		}
-	
+		
 		// FIXME: could generalize by passing select id instead of separate search_* functions
-		pageObj.time = setTimeout(function() { search_func(pageObj.lid, pageObj.search_term); }, 500);
+		pageObj.time = setTimeout(
+			function() { 
+				search_func(pageObj.lid, pageObj.search_term); 
+			},
+			500
+		);
 	}
 }
 
+// FIXME: the search functions below are all the same, consolidate
+
 function search_genomes (lid, search_term) {
+	$("#wait_genome").animate({opacity:1});
+	$("#select_genome_items").html("<option disabled='disabled'>Searching...</option>");
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -328,11 +337,14 @@ function search_genomes (lid, search_term) {
 		},
 		success : function(val) {
 			$("#select_genome_items").html(val);
+			$("#wait_genome").animate({opacity:0});
 		},
 	});
 }
 
 function search_experiments (lid, search_term) {
+	$("#wait_experiment").animate({opacity:1});
+	$("#select_experiments_items").html("<option disabled='disabled'>Searching...</option>");
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -342,11 +354,14 @@ function search_experiments (lid, search_term) {
 		},
 		success : function(val) {
 			$("#select_experiment_items").html(val);
+			$("#wait_experiment").animate({opacity:0});
 		},
 	});
 }
 
 function search_features (lid, search_term) {
+	$("#wait_feature").animate({opacity:1});
+	$("#select_feature_items").html("<option disabled='disabled'>Searching...</option>");
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -356,11 +371,14 @@ function search_features (lid, search_term) {
 		},
 		success : function(val) {
 			$("#select_feature_items").html(val);
+			$("#wait_feature").animate({opacity:0});
 		},
 	});
 }
 
 function search_lists (lid, search_term) {
+	$("#wait_list").animate({opacity:1});
+	$("#select_list_items").html("<option disabled='disabled'>Searching...</option>");
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -370,40 +388,92 @@ function search_lists (lid, search_term) {
 		},
 		success : function(val) {
 			$("#select_list_items").html(val);
+			$("#wait_list").animate({opacity:0});
 		},
 	});
 }
 
+function search_annotation_types () {
+	type_group  = $("#edit_annotation_type_group").val();
+	search_term = $("#edit_annotation_type").val();
+	if (search_term.length > 2) {
+		$.ajax({
+			data: {
+				jquery_ajax: 1,
+				fname: 'search_annotation_types',
+				type_group: type_group,
+				search_term: search_term,
+			},
+			success : function(val) {
+				var items = jQuery.parseJSON(val);
+				$("#edit_annotation_type").autocomplete("option", "source", items);
+				$("#edit_annotation_type").autocomplete("search");
+			},
+		});
+	}
+}
+
+function get_annotation_type_groups () {
+	$.ajax({
+		data: {
+			jquery_ajax: 1,
+			fname: 'get_annotation_type_groups'
+		},
+		success : function(val) {
+			var items = jQuery.parseJSON(val);
+			$("#edit_annotation_type_group").autocomplete("option", "source", items);
+			$("#edit_annotation_type_group").autocomplete("search");
+		},
+	});
+}
+
+function dialog_delete_list (opts) {
+	$("#list_delete_box").dialog("option", "title", "Delete List");
+	$("#list_delete_box").dialog("option", "width", "450");
+	$("#list_delete_box").dialog('open');
+}
+
+function delete_list (opts) {
+	$.ajax({
+		data: {
+			jquery_ajax: 1,
+			fname: 'delete_list',
+			lid: opts.lid,
+		},
+		success : function(val) {
+			location.reload();
+		},
+	});
+}
 </SCRIPT>
 
-<div>
- List Info:<br>
- <div id="list_info">
-  <TMPL_VAR NAME=LIST_INFO>
- </div>
+<div id="list_info">
+ <TMPL_VAR NAME=LIST_INFO>
 </div>
 
 <br>
 
-<div>
- List Annotations:<br>
- <div id="list_annotations">
-  <TMPL_VAR NAME=LIST_ANNOTATIONS>
- </div>
+<div id="list_annotations">
+ <TMPL_VAR NAME=LIST_ANNOTATIONS>
 </div>
 
 <br>
 
-<div>
- List Contents:<br>
- <div id="list_contents">
-  <TMPL_VAR NAME=LIST_CONTENTS>
- </div>
+<div id="list_contents">
+ <TMPL_VAR NAME=LIST_CONTENTS>
 </div>
 
 <div id="list_info_edit_box" class="dialog_box"></div>
 <div id="list_annotation_edit_box" class="dialog_box"></div>
 <div id="list_contents_edit_box" class="dialog_box"></div>
+
+<div id="list_delete_box" class="dialog_box" align='center'>
+Are you sure you want to permanently delete this list?<p>
+ <div>
+  <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="delete_list({lid: '<TMPL_VAR NAME=LID>'});">Yes</span>
+  <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="$('#list_delete_box').dialog('close');">No</span>
+ </div>
+</div>
 
 </TMPL_IF> <!-- MAIN -->
 
@@ -436,40 +506,6 @@ function search_lists (lid, search_term) {
 
 <TMPL_IF NAME=ADD_LIST_ANNOTATION> <!-- FIXME: this is redundant with ExperimentView.tmpl, move into own sub-template? -->
 <SCRIPT>
-	function search_annotation_types () {
-		type_group  = $("#edit_annotation_type_group").val();
-		search_term = $("#edit_annotation_type").val();
-		if (search_term.length > 2) {
-			$.ajax({
-				data: {
-					jquery_ajax: 1,
-					fname: 'search_annotation_types',
-					type_group: type_group,
-					search_term: search_term,
-				},
-				success : function(val) {
-					var items = jQuery.parseJSON(val);
-					$("#edit_annotation_type").autocomplete("option", "source", items);
-					$("#edit_annotation_type").autocomplete("search");
-				},
-			});
-		}
-	}
-	
-	function get_annotation_type_groups () {
-		$.ajax({
-			data: {
-				jquery_ajax: 1,
-				fname: 'get_annotation_type_groups'
-			},
-			success : function(val) {
-				var items = jQuery.parseJSON(val);
-				$("#edit_annotation_type_group").autocomplete("option", "source", items);
-				$("#edit_annotation_type_group").autocomplete("search");
-			},
-		});
-	}	
-
 	$("#edit_annotation_type_group").autocomplete({
 	    source: function() {
 	    			get_annotation_type_groups();
@@ -478,7 +514,7 @@ function search_lists (lid, search_term) {
 	
 	$("#edit_annotation_type").autocomplete({
 	    source: []
-	});		
+	});	
 </SCRIPT>
 <table class="small">
  <tr valign='top'>
@@ -491,7 +527,7 @@ function search_lists (lid, search_term) {
  </tr>
  <tr>
   <td>Type:</td>
-  <td><input id="edit_annotation_type" onkeypress="wait_to_search(search_annotation_types);" size="53"></td>
+  <td><input id="edit_annotation_type" onkeypress="wait_to_search(search_annotation_types);" size="53" value="<TMPL_VAR NAME=DEFAULT_TYPE>"></td>
  </tr> 
  <tr>
   <td>Type Group:</td>
@@ -540,20 +576,23 @@ $(function() { $("#tabs").tabs({selected:0}); });
 
 <div id="tab-2">
  <table class="small">
-  <tr>
-   <td>Search:</td>
-   <td><input type="textbox" size="53" id="edit_genome_search" onkeyup="wait_to_search(search_genomes, <TMPL_VAR NAME=LID>, this.value);"><span class='ui-button ui-corner-all' onclick="search_genomes(<TMPL_VAR NAME=LID>, $('#edit_genome_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span></td>
-  </tr>
-  <tr>
-   <td colspan='2'>
-    <form name="available_genome_list_items">
-     <select multiple id="select_genome_items" size="10" style="max-width: 500px;">
-     </select>
-    </form>
+  <tr align='left'>
+   <td>
+    Search:
+    <input type="textbox" size="53" id="edit_genome_search" onkeyup="wait_to_search(search_genomes, <TMPL_VAR NAME=LID>, this.value);">
+    <span class='ui-button ui-corner-all' onclick="search_genomes(<TMPL_VAR NAME=LID>, $('#edit_genome_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+    <img id="wait_genome" src="picts/ajax-loader.gif" style="opacity: 0;" />
    </td>
   </tr>
   <tr>
-   <td colspan='2'><i>Hold down SHIFT or CTRL key to select multiple items</i></td>
+   <td>
+    <select multiple id="select_genome_items" size="10" style="min-width:500; max-width: 500px;">
+     <option disabled='disabled'>No results, please enter a search term.</option>
+    </select>
+   </td>
+  </tr>
+  <tr>
+   <td><i>Hold down SHIFT or CTRL key to select multiple items</i></td>
   </tr>
  </table>
  <span href="javascript:void(0)" onClick="add_selected_items({select_id: 'select_genome_items', lid: '<TMPL_VAR NAME=LID>'});" class='ui-button ui-button-go ui-corner-all'>Add Selected Items</span>
@@ -561,20 +600,23 @@ $(function() { $("#tabs").tabs({selected:0}); });
 
 <div id="tab-3">
  <table class="small">
-  <tr>
-   <td>Search:</td>
-   <td><input type="textbox" size="53" id="edit_experiment_search" onkeyup="wait_to_search(search_experiments, <TMPL_VAR NAME=LID>, this.value);"><span class='ui-button ui-corner-all' onclick="search_experiments(<TMPL_VAR NAME=LID>, $('#edit_experiment_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span></td>
-  </tr>
-  <tr>
-   <td colspan='2'>
-    <form name="available_experiment_list_items">
-     <select multiple id="select_experiment_items" size="10" style="max-width: 500px;">
-     </select>
-    </form>
+  <tr align='left'>
+   <td>
+    Search:
+    <input type="textbox" size="53" id="edit_experiment_search" onkeyup="wait_to_search(search_experiments, <TMPL_VAR NAME=LID>, this.value);">
+    <span class='ui-button ui-corner-all' onclick="search_experiments(<TMPL_VAR NAME=LID>, $('#edit_experiment_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+    <img id="wait_experiment" src="picts/ajax-loader.gif" style="opacity: 0;" />
    </td>
   </tr>
   <tr>
-   <td colspan='2'><i>Hold down SHIFT or CTRL key to select multiple items</i></td>
+   <td>
+    <select multiple id="select_experiment_items" size="10" style="min-width:500; max-width: 500px;">
+     <option disabled='disabled'>No results, please enter a search term.</option>
+    </select>
+   </td>
+  </tr>
+  <tr>
+   <td><i>Hold down SHIFT or CTRL key to select multiple items</i></td>
   </tr>
  </table>
  <span href="javascript:void(0)" onClick="add_selected_items({select_id: 'select_experiment_items', lid: '<TMPL_VAR NAME=LID>'});" class='ui-button ui-button-go ui-corner-all'>Add Selected Items</span>
@@ -582,16 +624,19 @@ $(function() { $("#tabs").tabs({selected:0}); });
 
 <div id="tab-4">
  <table class="small">
-  <tr>
-   <td>Search:</td>
-   <td><input type="textbox" size="53" id="edit_feature_search" onkeyup="wait_to_search(search_features, <TMPL_VAR NAME=LID>, this.value);"><span class='ui-button ui-corner-all' onclick="search_features(<TMPL_VAR NAME=LID>, $('#edit_feature_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span></td>
+  <tr align='left'>
+   <td>
+    Search:
+    <input type="textbox" size="53" id="edit_feature_search" onkeyup="wait_to_search(search_features, <TMPL_VAR NAME=LID>, this.value);">
+    <span class='ui-button ui-corner-all' onclick="search_features(<TMPL_VAR NAME=LID>, $('#edit_feature_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+    <img id="wait_feature" src="picts/ajax-loader.gif" style="opacity: 0;" />
+   </td>
   </tr>
   <tr>
    <td colspan='2'>
-    <form name="available_feature_list_items">
-     <select multiple id="select_feature_items" size="10" style="max-width: 500px;">
-     </select>
-    </form>
+    <select multiple id="select_feature_items" size="10" style="min-width:500; max-width: 500px;">
+     <option disabled='disabled'>No results, please enter a search term.</option>
+    </select>
    </td>
   </tr>
   <tr>
@@ -603,16 +648,19 @@ $(function() { $("#tabs").tabs({selected:0}); });
 
 <div id="tab-5">
  <table class="small">
-  <tr>
-   <td>Search:</td>
-   <td><input type="textbox" size="53" id="edit_list_search" onkeyup="wait_to_search(search_lists, <TMPL_VAR NAME=LID>, this.value);"><span class='ui-button ui-corner-all' onclick="search_lists(<TMPL_VAR NAME=LID>, $('#edit_list_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span></td>
+  <tr align='left'>
+   <td>
+    Search:
+    <input type="textbox" size="53" id="edit_list_search" onkeyup="wait_to_search(search_lists, <TMPL_VAR NAME=LID>, this.value);">
+    <span class='ui-button ui-corner-all' onclick="search_lists(<TMPL_VAR NAME=LID>, $('#edit_list_search').attr('value'));"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+    <img id="wait_list" src="picts/ajax-loader.gif" style="opacity: 0;" />
+   </td>  
   </tr>
   <tr>
    <td colspan='2'>
-    <form name="available_list_items">
-     <select multiple id="select_list_items" size="10" style="max-width: 500px;">
-     </select>
-    </form>
+    <select multiple id="select_list_items" size="10" style="min-width:500; max-width: 500px;">
+     <option disabled='disabled'>No results, please enter a search term.</option>
+    </select>
    </td>
   </tr>
   <tr>
@@ -637,7 +685,7 @@ Admin Functions:<br>
 To do:
    - If only one item in add item list, auto-select it
    - Disable add button if no items left to add
-   - add confirmation dialog to delete list function   
+   - show count in search results (x of y)
 </div>
 </TMPL_IF>
 
