--- a/web/tmpl/Lists.tmpl
+++ b/web/tmpl/Lists.tmpl
@@ -11,7 +11,7 @@ $(document).ready(function(){
 		cache: false,
 	});
 	set_table();
-//	$(".dialog_box").dialog({autoOpen: <TMPL_VAR NAME=EDIT_BOX_OPEN>, width: 600});
+	$(".dialog_box").dialog({autoOpen: 0, width: 600});
 	<TMPL_VAR ADDITIONAL_STUFF>
 });
 
@@ -63,8 +63,8 @@ function create_list (opts){
 	else { alert ('Error!  Must have a name!');}
 }
 
-function delete_list (opts){
-	lid = opts.lid;
+function delete_list () {
+	lid = $('#list_delete_lid').val();
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -75,6 +75,14 @@ function delete_list (opts){
 			run_get_lists_for_user({divid: 'lists'});
 		},
 	});
+	$("#list_delete_box").dialog('close');
+}
+
+function dialog_delete_list (opts) {
+	$("#list_delete_box").dialog("option", "title", "Delete List?");
+	$("#list_delete_box").dialog("option", "width", "450");
+	$("#list_delete_box").dialog('open');
+	$('#list_delete_lid').val(opts.lid);
 }
 </SCRIPT>
 
@@ -98,6 +106,15 @@ function delete_list (opts){
 </div>
 
 <div id=edit_box class= "dialog_box"></div>
+
+<div id="list_delete_box" class="dialog_box" style='display:none;' align='center'>
+Are you sure you want to permanently delete this list?<p>
+ <div>
+  <input type='hidden' id='list_delete_lid'>
+  <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="delete_list();">Yes</span>
+  <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="$('#list_delete_box').dialog('close');">No</span>
+ </div>
+</div>
 
 <div id=admin_stuff></div>
 </TMPL_IF>
